# computacao-grafica

./: README.md
Atividade01/: README.md  circulo.cpp  circulo.ppm  class_save_img.cpp  classe  main.cpp  square.cpp  square.ppm
Atividade02/: CMakeLists.txt  README.md  color.h  main.cpp  mat2.h  mat3.h  mat4.h  mat_teste.txt  matrizes.cpp  testes.cpp  vec2.h  vec3.h  vec4.h  vet_teste.txt  vetor.h  vetores.cpp
Atividade02/tutorial/: color.h  main.cpp  vec3.h
Atividade03/: README.md  gato_vertices  meu_programa  readObj.cpp  star_vertices.txt
Atividade04/: ObjFileReader.h  README.md  main.cpp  obj_exe  obj_view.html  piramide_leitura.txt  tri_exe  triangulo.ppm  tutorial1_exe
Atividade05/: README.md  camera.h  circle_sec9_5.ppm  circle_sec9_5_9.ppm  circle_sec9_5cg1.ppm  circle_sec9_5cg9.ppm  color.h  hittable.h  hittable_list.h  main.cpp  programa  sphere.h  vec3.h
Atividade06/: README.md  camera.h  color.h  hittable.h  interval.h  main.cpp  material.h  programa  rtweekend.h  sphere.h  vec3.h
